--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon",
-    "build": "rm -rf ./build && tsc", 
+    "build": "rm -rf ./build && tsc",
     "start": "npm run build && node build/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.16",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.17",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
