--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "angular-auth-oidc-client": "^15.0.3",
+    "angular-auth-oidc-client": "15.0.3",
     "jose": "^4.12.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
